Fixed overflowing button on logged out track page

--- a/app/assets/stylesheets/pages/track-page.scss
+++ b/app/assets/stylesheets/pages/track-page.scss
@@ -335,6 +335,7 @@ body.controller-my-tracks.action-show {
             margin:0 auto;
             display:block;
             width:280px;
+            max-width:100%;
             color:#fff;
         }
     }
